fixes #12958 dashlet collapse/expand

--- a/civicrm/custom/ext/gov.nysenate.dashboard/css/dashboard.css
+++ b/civicrm/custom/ext/gov.nysenate.dashboard/css/dashboard.css
@@ -6,3 +6,6 @@
 #crm-container .column-0 {
   padding-bottom: 0;
 }
+#crm-container h3.widget-header {
+  margin-left: 25px;
+}
